<resources>
    <string name="app_name">ITIHASA</string>
    <string name="app_version">v0.01a</string>
    <string name="credits">CREDITS</string>
    <string name="sound_setting">Sound Settings</string>
    <string name="volume_setting">Volume</string>
    <string name="back">BACK</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="exit">EXIT</string>
    <string name="end_game">Kembali ke menu</string>
    <string name="programmer">Programmers</string>
    <string name="progs">Andi Arizal\nSabili B. Lopa\nDaniel Stephen</string>
    <string name="designer">Designers</string>
    <string name="des1">Agus Wahyu Setiawan</string>
    <string name="dess">Agus Wahyu Setiawan\nJefanya Givenfirsta\nRavica Hayati\nMuhammad Bayu Permana Putra\nNara Bagus Darmawan</string>
    <string name="musicby">Music by</string>
    <string name="musician">Alif Maulana</string>
    <string name="supers">Special Thanks</string>
    <string name="supervisors">N1\nWDY</string>

    <string name="storyTextBegin">Dasar cerita permainan akan diambil dari epos Mahabharata.
    Ada dua tipe karakter yang bisa kamu pilih dalam permainan ini, yaitu Yudistira , dan Duryudana. Untuk permainan kali ini, mau menjadi Yudistira, atau menjadi Duryudana?</string>
    <string name="storyTextYudistira1">
        Hai, Yudistira! Kamu sebagai saudara tertua Pandawa mendapat kiriman surat dari Duryudana, pemimpin Kerajaan Kuru.
        Undangan ini berisi tantangan untuk bermain dadu di Kerajaan Kuru.</string>
    <string name="storyTextYudistira2">
        Dengan sedikit keraguan, kamu bersama saudara dan istrimu tiba di Hastinapura untuk menghadiri undangan Duryudana. </string>
    <string name="storyTextYudistira3">
        Kamu sudah berada di ruang bermain dadu.
        Ada Duryudana dan Sangkuni, paman Duryudana, yang juga hadir sebagai penasihat sekaligus sebagai pelempar dadu.
        Apa yang akan kamu taruhkan?
    </string>
    <string name="storyTextYudistira4a">Putaran pertama dimulai!</string>
    <string name="storyTextYudistira4b.1">
        Duryudana bersikeras memaksamu,
        </string>
    <string name="storyTextYudistira4b.2">\“Hai, Yudistira pemimpin Kurujangala, kamu harus bertaruh denganku!\”
    </string>
    <string name="storyTextYudistira4b.3">Ikut bertaruh atau tidak?</string>
    <string name="storyTextYudistira5.1">
    Yudistira, kamu kalah!</string>
    <string name="storyTextYudistira5.2">
        \“Aku kalah? Tidak apa-apa, ini masih permulaan.\”
    </string>
    <string name="storyTextYudistira6.1">
        Untuk melanjutkan permainan, kamu harus mempertaruhkan yang lebih besar dari senjata perang.
    </string>
    <string name="storyTextYudistira6.2">\“Baiklah, akan kupertaruhkan harta kerajaan.\”</string>
    <string name="storyTextYudistira7.1">
    Putaran kedua dimulai, dadu pun dilempar. Namun Yudistira, kamu kalah lagi. Semua harta kerajaaan kini jatuh ke tangan Duryudana.
    </string>
    <string name="storyTextYudistira7.2">\“Ah, tidak! Aku harus bermain lagi agar harta kerajaanku kembali.\”</string>
    <string name="storyTextYudistira8">
    Kamu ingin bermain lagi, namun yang tersisa kini hanyalah kerajaan. Pertaruhkan Kerajaan Kurujangala??</string>
    <string name="storyTextYudistira9a.1">
        Putaran ketiga dimulai, dadu dilempar lagi. Yudistira, kamu kalah lagi untuk yang ketiga kalinya. Kerajaaan Kurujangala kini jatuh ke tangan Duryudana.
    </string>
    <string name="storyTextYudistira9a.2">\“Tidak! Kerajaan Kurujangala pun kini menjadi milik Duryudana?! Aku harus bagaimana?\”</string>
    <string name="storyTextYudistira9b.1">Sangkuni menghampiri,
    </string>
    <string name="storyTextYudistira9b.2">\“Pertaruhkan saja kerajaan, maka Kerajaan Kuru akan kembali ke tanganmu jika kamu menang.\”</string>
    <string name="storyTextYudistira9b.3">Ikuti saran Sangkuni?</string>
    <string name="storyTextYudistira10.1">
        \“Yudistira, tidak apa-apa. Kamu masih punya saudara-saudara dan istrimu. Pertaruhkan saja, siapa tau kali ini keberuntungan berpihak kepadamu.\”
    </string>
    <string name="storyTextYudistira10.2">
        Duryudana menantang untuk mempertaruhkan saudara dan istrimu. Apa yang akan kamu lakukan?
    </string>

    <string name="storyTextYudistira11a">Putaran keempat dimulai, dadu dilempar lagi.
        Kamu kalah lagi untuk yang keempat kalinya dan kini saudara dan istrimu menjadi milik Duryudana!
    </string>
    <string name="storyTextYudistira11b">
        Karena jumlah yang minim, kamu gagal merebut kembali semua yang telah kamu pertaruhkan.
        Drestarasta, ayah Duryudana, melerai perkelahian dan menyuruhmu pulang.
    </string>
    <string name="storyTextYudistira12">
        Drestarasta, ayah Duryudana, merasa bahwa malapetaka akan menimpa keturunannya.
        Ia kemudian mengembalikan semua yang telah kamu jadikan taruhan.
    </string>
    <string name="storyTextYudistira13">Apa yang akan kamu lakukan setelah ini?</string>


    <string name="storyTextDuryudana1">Hai, Duryudana! Masa penghukuman Pandawa kini telah selesai. Telah diajukan perundingan perdamaian dan kamu tidak menyetujui perdamaian itu.</string>
    <string name="storyTextDuryudana2">Karena kamu tidak menyetujui perdamaian, maka akan terjadi perang Bharatayudha, yaitu perang antara Pandawa dan Korawa.</string>
    <string name="storyTextDuryudana3">Kamu kemudian mendatangi Batara Kresna untuk meminta bala bantuan perang.</string>
    <string name="storyTextDuryudana4">Kamu telah tiba di kediaman Kresna. Tetapi ia sedang tidur, kamu ingin duduk terlebih dahulu. Duduk di samping mana?</string>
    <string name="storyTextDuryudana5a">Arjuna juga datang dan duduk di samping kaki Kresna.</string>
    <string name="storyTextDuryudana5b">Arjuna juga datang dan duduk di samping kepala Kresna.</string>
    <string name="storyTextDuryudana6">Lihat! Kresna sudah bangun, sampaikan kepadanya bahwa kau memerlukan bala bantuan!</string>
    <string name="storyTextDuryudana7">“Batara Kresna, akan terjadi perang besar dan aku memerlukan bala bantuan. Maka bantulah aku terlebih dahulu.”</string>
    <string name="storyTextDuryudana8a.1">Kresna menjawab,</string>
    <string name="storyTextDuryudana8a.2">“Namun yang kulihat pertama saat aku bangun adalah Arjuna.”</string>
    <string name="storyTextDuryudana8a.3">Sampaikan bahwa kau datang terlebih dahulu daripada Arjuna!</string>
    <string name="storyTextDuryudana8b.1">Kresna menjawab, </string>
    <string name="storyTextDuryudana8b.2">“Baiklah, karena yang kulihat pertama saat aku bangun adalah Duryudana, maka sampaikan apa keperluanmu.”</string>
    <string name="storyTextDuryudana8b.3">Sampaikan apa yang kau perlukan!</string>
    <string name="storyTextDuryudana9a">“Batara Kresna, aku yang datang pertama menghampirimu ketimbang Arjuna. Maka berilah aku bala bantuan terlebih dahulu.”</string>
    <string name="storyTextDuryudana9b">“Batara Kresna, berilah aku bala bantuan karena perang Bharatayudha akan terjadi.”</string>
    <string name="storyTextDuryudana10a.1">Kresna bertanya,</string>
    <string name="storyTextDuryudana10a.2">“Sudah, sudah! Aku akan menolong kalian berdua. Silakan pilih antara 10.000 pasukan perang atau diriku sendiri yang hanya akan memberi satu kali pertolongan?”</string>
    <string name="storyTextDuryudana10b.1">Kresna bertanya,</string>
    <string name="storyTextDuryudana10b.2">“Aku akan menolongmu, jadi kau pilih antara 10.000 pasukan perang atau diriku sendiri yang hanya akan memberi satu kali pertolongan?”</string>


    <string name="storyTextDuryudana11a">Perang Bharatayudha dimulai. Meski dengan mengerahkan 10.000 pasukan, kamu tetap kalah. Hingga hari ke-18, kamu bersembunyi di telaga.
        Namun, Pandawa kini mengetahui keberadaanmu. Beri saja syarat kepada Pandawa!</string>
    <string name="storyTextDuryudana11b">Perang Bharatayudha dimulai. Banyak pasukan dan keluargamu yang tewas. Hingga hari ke-18, kamu bersembunyi di telaga.
        Namun, Pandawa kini mengetahui keberadaanmu. Minta bantuan kepada Batara Kresna</string>
    <string name="storyTextDuryudana12a.1">Kamu memberi syarat kepada Pandawa</string>
    <string name="storyTextDuryudana12a.2">\"Aku hanya akan berperang lagi jika aku diberi senjata dan jika Pandawa mau bertarung satu persatu.\"</string>
    <string name="storyTextDuryudana12b.1">Kamu meminta bantuan Batara Kresna,</string>
    <string name="storyTextDuryudana12b.2">"Batara Kresna, kali ini aku meminta bantuanmu untuk mengalahkan Pandawa."</string>
    <string name="storyTextDuryudana14">Dengan bantuan Batara Kresna, kamu berhasil mengalahkan Pandawa. Selamat!</string>
    <string name="storyTextDuryudana13">Pandawa menyetujui tantanganmu. Di tengah pertarungan, Bima memukul pahamu dengan Gada Rujak Polo hingga tewas.</string>
    <string name="end">TAMAT</string>


    <string name="storyChoiceBegin">Yudistira</string>
    <string name="storyChoiceBegin2">Duryudana</string>

    <string name="storyChoiceYudistira3a">Senjata perang</string>
    <string name="storyChoiceYudistira3b">Tidak bertaruh</string>
    <string name="storyChoiceYudistira4a">Ya, pertaruhkan\nsenjata perang</string>
    <string name="storyChoiceYudistira4b">Tidak</string>
    <string name="storyChoiceYudistira8a">Ya</string>
    <string name="storyChoiceYudistira8b">Tidak</string>
    <string name="storyChoiceYudistira9a">Ya</string>
    <string name="storyChoiceYudistira9b">Tidak</string>
    <string name="storyChoiceYudistira10a">Terima tantangan</string>
    <string name="storyChoiceYudistira10b">Rebut kembali harta</string>
    <string name="storyChoiceYudistira13b">Rebut harta taruhanmu</string>
    <string name="storyChoiceYudistira13a">Pulang dengan kekalahan</string>

    <string name="storyChoiceDuryudana4a">Kepala</string>
    <string name="storyChoiceDuryudana4b">Kaki</string>
    <string name="storyChoiceDuryudana10a">Pasukan perang</string>
    <string name="storyChoiceDuryudana10b">Batara Kresna</string>
    <string name="storyChoiceDuryudana12a">Tantang pandawa \nberduel satu lawan satu</string>
    <string name="storyChoiceDuryudana12b">Meminta bantuan \nBatara Kresna</string>

    <string name="storyNext">Lanjut</string>

    <string name="title_activity_game_screen_yudis13">activity_game_screen_yudis13</string>
    <string name="game_over">PERMAINAN BERAKHIR</string>
    <string name="the_end">TAMAT</string>

    <string name="over_reason1">Kamu sudah ditendang keluar dari permainan</string>
    <string name="over_reason2">Kamu pulang dengan tangan kosong</string>
    <string name="over_reason3">Kamu pulang dengan kekalahan dan perasaan kecewa</string>
    <string name="over_reason4">Kamu gagal mengambil harta milikmu, ditendang keluar dari permainan</string>

    <string name="ending">Selamat, kamu telah menyelesaikan permainan</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="coming">COMING SOON!!!</string>

</resources>