<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenYudis3"
    android:background="@drawable/yudistira3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textbox"
        app:layout_constraintBottom_toTopOf="@+id/buttonBeginC3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/storyText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/play"
        android:text="@string/storyTextYudistira3"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.16000003" />

    <ImageButton
        android:id="@+id/buttonBeginC3"
        android:layout_width="152dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:onClick="selectChoice1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonBeginC1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textBeginC3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/play_bold"
        android:gravity="center"
        android:text="@string/storyChoiceYudistira3a"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBeginC3"
        app:layout_constraintEnd_toEndOf="@+id/buttonBeginC3"
        app:layout_constraintStart_toStartOf="@+id/buttonBeginC3"
        app:layout_constraintTop_toTopOf="@+id/buttonBeginC3"
        app:layout_constraintVertical_bias="0.45" />

    <ImageButton
        android:id="@+id/buttonBeginC1"
        android:layout_width="152dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:onClick="selectChoice2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBeginC3" />

    <TextView
        android:id="@+id/textBeginC2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/play_bold"
        android:gravity="center"
        android:text="@string/storyChoiceYudistira3b"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBeginC1"
        app:layout_constraintEnd_toEndOf="@+id/buttonBeginC1"
        app:layout_constraintStart_toStartOf="@+id/buttonBeginC1"
        app:layout_constraintTop_toTopOf="@+id/buttonBeginC1"
        app:layout_constraintVertical_bias="0.43" />
</androidx.constraintlayout.widget.ConstraintLayout>